--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
 
     "content_scripts": [{
         "matches": [ "http://*/*", "https://*/*" ],
-        "js":      [ "content.js" ],
+        "js":      [ "jp/dictionary.js", "content.js" ],
         "run_at":  "document_end"
     }]
 }
