--- a/manifest.json
+++ b/manifest.json
@@ -8,9 +8,11 @@
         "default_icon": "icon.png"
     },
 
+    "background": { "page": "background.html" },
+
     "content_scripts": [{
         "matches": [ "http://*/*", "https://*/*" ],
-        "js":      [ "jp/dictionary.js", "content.js" ],
+        "js":      [ "content.js" ],
         "run_at":  "document_end"
     }]
 }
