--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -4,15 +4,12 @@
     "description":      "Yomichan Extension",
     "version":          "0.0.1",
 
-    "browser_action": {
-        "default_icon": "icon.png"
-    },
-
-    "background": { "page": "background.html" },
+    "browser_action": {"default_icon": "icon.png"},
+    "background":     {"page": "background.html"},
 
     "content_scripts": [{
-        "matches": [ "http://*/*", "https://*/*" ],
-        "js":      [ "content.js" ],
+        "matches": ["http://*/*", "https://*/*"],
+        "js":      ["content.js"],
         "run_at":  "document_end"
     }]
 }
