--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
 util/data/* filter=lfs diff=lfs merge=lfs -text
-ext/jp/data/* filter=lfs diff=lfs merge=lfs -text
+ext/bg/data/* filter=lfs diff=lfs merge=lfs -text
