Popup stub now working.

--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -9,6 +9,7 @@
 
     "content_scripts": [{
         "matches": ["*://*/*"],
-        "js":      ["content.js", "api.js"]
+        "js":      ["lib/jquery-2.2.2.min.js", "api.js", "util.js", "client.js"],
+        "css":     ["client.css"]
     }]
 }
