--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -5,7 +5,8 @@
     "version":          "0.0.1",
 
     "browser_action": {"default_icon": "icon.png"},
-    "background":     {"page": "background.html"},
+    "background":     {"page": "bg/background.html"},
+    "options_page":   "bg/options.html",
 
     "content_scripts": [{
         "matches": ["*://*/*"],
