--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -7,6 +7,7 @@
     "browser_action": {"default_icon": "icon.png"},
     "background":     {"page": "bg/background.html"},
     "options_page":   "bg/options.html",
+    "permissions":    [ "storage" ],
 
     "content_scripts": [{
         "matches": ["*://*/*"],
