--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 util/data/*dic* filter=lfs diff=lfs merge=lfs -text
 ext/bg/data/*dic* filter=lfs diff=lfs merge=lfs -text
+*.ttf filter=lfs diff=lfs merge=lfs -text
