Show action icons

--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -24,7 +24,10 @@
     "web_accessible_resources": [
         "fg/css/frame.css",
         "fg/js/frame.js",
-        "fg/ttf/kanji-stroke-orders.ttf"
+        "fg/ttf/kanji-stroke-orders.ttf",
+        "fg/img/icon_add_expression.png",
+        "fg/img/icon_add_reading.png",
+        "fg/img/icon_copy_definition.png"
     ],
 
     "content_scripts": [{
