--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -26,5 +26,10 @@
         "fg/js/frame.js",
         "fg/ttf/kanji-stroke-orders.ttf",
         "fg/ttf/vl-gothic-regular.ttf"
-    ]
+    ],
+    "applications": {
+      "gecko": {
+        "id": "yomichan-gecko@example.com"
+      }
+    }
 }
