Elementary audio playback support

--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -22,6 +22,7 @@
         "fg/img/add_kanji.png",
         "fg/img/add_vocab_kana.png",
         "fg/img/add_vocab_kanji.png",
+        "fg/img/pronounce.png",
         "fg/js/frame.js",
         "fg/ttf/kanji-stroke-orders.ttf",
         "fg/ttf/vl-gothic-regular.ttf"
