Request permission to access localhost
Permission is required to do XHR request to the domain. Otherwise
Gecko attempts to use CORS to negotiate the request, which AnkiConnect
does not expect.

--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -18,7 +18,7 @@
     "options_ui": {
         "page": "bg/options.html"
     },
-    "permissions": ["storage"],
+    "permissions": ["*://127.0.0.1/*", "storage"],
     "web_accessible_resources": [
         "fg/css/frame.css",
         "fg/img/add_kanji.png",
