Pronounce => Play Audio

--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -24,7 +24,7 @@
         "fg/img/add_kanji.png",
         "fg/img/add_vocab_kana.png",
         "fg/img/add_vocab_kanji.png",
-        "fg/img/pronounce.png",
+        "fg/img/play_audio.png",
         "fg/js/frame.js",
         "fg/ttf/kanji-stroke-orders.ttf",
         "fg/ttf/vl-gothic-regular.ttf"
