Add local permissions

--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -10,7 +10,7 @@
     "author": "Alex Yatskov",
     "background": {"page": "bg/background.html"},
     "content_scripts": [{
-        "matches": ["*://*/*"],
+        "matches": ["*://*/*", "file://*/*"],
         "js": [
             "fg/js/source-range.js",
             "fg/js/source-image.js",
@@ -25,7 +25,7 @@
     "options_ui": {
         "page": "bg/options.html"
     },
-    "permissions": ["*://127.0.0.1/*", "storage"],
+    "permissions": ["file://*/*", "http://127.0.0.1/*", "storage"],
     "web_accessible_resources": [
         "fg/css/frame.css",
         "fg/img/add_kanji.png",
