Rename references of "vocab" to "term"

--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -28,8 +28,8 @@
     "web_accessible_resources": [
         "fg/css/frame.css",
         "fg/img/add_kanji.png",
-        "fg/img/add_vocab_kana.png",
-        "fg/img/add_vocab_kanji.png",
+        "fg/img/add_term_kana.png",
+        "fg/img/add_term_kanji.png",
         "fg/img/play_audio.png",
         "fg/js/frame.js",
         "fg/ttf/kanji-stroke-orders.ttf",
