--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -15,7 +15,7 @@
             "fg/js/source-range.js",
             "fg/js/source-element.js",
             "fg/js/popup.js",
-            "fg/js/api.js",
+            "fg/js/util.js",
             "fg/js/client.js"
         ],
         "css": ["fg/css/client.css"]
