--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -16,7 +16,7 @@
             "fg/js/source-element.js",
             "fg/js/popup.js",
             "fg/js/util.js",
-            "fg/js/client.js"
+            "fg/js/driver.js"
         ],
         "css": ["fg/css/client.css"]
     }],
