--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -33,11 +33,6 @@
         "fg/img/play_audio.png",
         "fg/js/frame.js",
         "fg/ttf/kanji-stroke-orders.ttf",
-        "fg/ttf/vl-gothic-regular.ttf",
-        "lib/bootstrap-3.3.6-dist/css/bootstrap-theme.min.css",
-        "lib/bootstrap-3.3.6-dist/css/bootstrap.min.css",
-        "lib/bootstrap-3.3.6-dist/fonts/glyphicons-halflings-regular.ttf",
-        "lib/bootstrap-3.3.6-dist/fonts/glyphicons-halflings-regular.woff",
-        "lib/bootstrap-3.3.6-dist/fonts/glyphicons-halflings-regular.woff2"
+        "fg/ttf/vl-gothic-regular.ttf"
     ]
 }
