--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -24,7 +24,14 @@
     "options_ui": {
         "page": "bg/options.html"
     },
-    "permissions": ["file://*/*", "http://127.0.0.1/*", "storage"],
+    "permissions": [
+        "webRequest",
+        "webRequestBlocking",
+        "file://*",
+        "http://127.0.0.1/*",
+        "https://ankiweb.net/*",
+        "storage"
+    ],
     "web_accessible_resources": [
         "fg/css/frame.css",
         "fg/img/add_kanji.png",
