--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 2,
     "name": "Yomichan",
-    "version": "0.9983",
+    "version": "1.0.0",
 
     "description": "Japanese dictionary with Anki integration",
     "icons": {"16": "img/icon16.png", "48": "img/icon48.png", "128": "img/icon128.png"},
@@ -27,7 +27,7 @@
     "permissions": [
         "webRequest",
         "webRequestBlocking",
-        "file://*",
+        "file://*/*",
         "http://127.0.0.1/*",
         "https://ankiweb.net/*",
         "storage"
