show spinner when adding notes (resolves #25)

--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -38,6 +38,7 @@
         "fg/img/add_term_kana.png",
         "fg/img/add_term_kanji.png",
         "fg/img/play_audio.png",
+        "fg/img/spinner.gif",
         "fg/js/frame.js",
         "fg/ttf/kanji-stroke-orders.ttf",
         "fg/ttf/vl-gothic-regular.ttf"
