--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -40,6 +40,7 @@
         "fg/img/play_audio.png",
         "fg/img/spinner.gif",
         "fg/js/frame.js",
+        "fg/frame.html",
         "fg/ttf/kanji-stroke-orders.ttf",
         "fg/ttf/vl-gothic-regular.ttf"
     ]
