--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -12,6 +12,7 @@
     "content_scripts": [{
         "matches": ["*://*/*", "file://*/*"],
         "js": [
+            "fg/js/gecko.js",
             "fg/js/source-range.js",
             "fg/js/source-element.js",
             "fg/js/popup.js",
