fixing permissions for firefox

--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -26,8 +26,7 @@
         "page": "bg/options.html"
     },
     "permissions": [
-        "file://*/*",
-        "http://127.0.0.1/*",
+        "<all_urls>",
         "storage"
     ],
     "web_accessible_resources": [
