--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -5,7 +5,10 @@
 
     "description": "Japanese dictionary with Anki integration",
     "icons": {"16": "img/icon16.png", "48": "img/icon48.png", "128": "img/icon128.png"},
-    "browser_action": {"default_icon": {"19": "img/icon19.png", "38": "img/icon38.png"}},
+    "browser_action": {
+        "default_icon": {"19": "img/icon19.png", "38": "img/icon38.png"},
+        "default_popup": "bg/popup.html"
+    },
 
     "author": "Alex Yatskov",
     "background": {"page": "bg/background.html"},
