--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -35,10 +35,10 @@
         "fg/frame.html",
         "fg/js/frame.js",
         "mixed/css/frame.css",
-        "mixed/img/add_kanji.png",
-        "mixed/img/add_term_kana.png",
-        "mixed/img/add_term_kanji.png",
-        "mixed/img/play_audio.png",
+        "mixed/img/add-kanji.png",
+        "mixed/img/add-term-kana.png",
+        "mixed/img/add-term-kanji.png",
+        "mixed/img/play-audio.png",
         "mixed/img/spinner.gif",
         "mixed/mp3/button.mp3",
         "mixed/ttf/kanji-stroke-orders.ttf",
