--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -46,8 +46,9 @@
     ],
     "applications": {
         "gecko": {
-            "id": "alex@foosoft.net",
-            "strict_min_version": "51.0"
+            "id": "yomichan@foosoft.net",
+            "strict_min_version": "51.0",
+            "update_url": "https://foosoft.net/projects/yomichan/dl/updates.json"
         }
     }
 }
