--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -43,6 +43,12 @@
                 "default": "Alt+Insert"
             },
             "description": "Open search window"
+        },
+        "options": {
+            "suggested_key": {
+                "default": "Alt+End"
+            },
+            "description": "Open options page"
         }
     },
     "web_accessible_resources": ["fg/frame.html"],
