--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -45,11 +45,5 @@
             "description": "Open search window"
         }
     },
-    "web_accessible_resources": ["fg/frame.html"],
-    "applications": {
-        "gecko": {
-            "id": "alex@foosoft.net",
-            "strict_min_version": "51.0"
-        }
-    }
+    "web_accessible_resources": ["fg/frame.html"]
 }
