Revert "remove firefox-only key"
This reverts commit a74964bca14551b79b724cfc5a6562f5587f4746.

--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -45,5 +45,11 @@
             "description": "Open search window"
         }
     },
-    "web_accessible_resources": ["fg/frame.html"]
+    "web_accessible_resources": ["fg/frame.html"],
+    "applications": {
+        "gecko": {
+            "id": "alex@foosoft.net",
+            "strict_min_version": "51.0"
+        }
+    }
 }
