--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -48,7 +48,7 @@
     "web_accessible_resources": ["fg/frame.html"],
     "applications": {
         "gecko": {
-            "id": "yomichan-live@foosoft.net",
+            "id": "alex@foosoft.net",
             "strict_min_version": "51.0",
             "update_url": "https://foosoft.net/projects/yomichan/dl/updates.json"
         }
