ctrl + c to copy

--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -29,7 +29,8 @@
     },
     "permissions": [
         "<all_urls>",
-        "storage"
+        "storage",
+        "clipboardWrite"
     ],
     "commands": {
         "toggle": {
