--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -50,8 +50,7 @@
     "applications": {
         "gecko": {
             "id": "alex@foosoft.net",
-            "strict_min_version": "51.0",
-            "update_url": "https://foosoft.net/projects/yomichan/dl/updates.json"
+            "strict_min_version": "51.0"
         }
     }
 }
