--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -50,7 +50,8 @@
     "applications": {
         "gecko": {
             "id": "yomichan-live@foosoft.net",
-            "strict_min_version": "51.0"
+            "strict_min_version": "51.0",
+            "update_url": "https://foosoft.net/projects/yomichan/dl/updates.json"
         }
     }
 }
