--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -15,9 +15,10 @@
     "content_scripts": [{
         "matches": ["http://*/*", "https://*/*", "file://*/*"],
         "js": [
-            "fg/js/util.js",
+            "fg/js/document.js",
             "fg/js/source-range.js",
             "fg/js/source-element.js",
+            "fg/js/background.js",
             "fg/js/popup.js",
             "fg/js/driver.js"
         ],
