--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -20,7 +20,7 @@
             "fg/js/source-element.js",
             "fg/js/background.js",
             "fg/js/popup.js",
-            "fg/js/driver.js"
+            "fg/js/frontend.js"
         ],
         "css": ["fg/css/client.css"]
     }],
