--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -15,11 +15,13 @@
     "content_scripts": [{
         "matches": ["http://*/*", "https://*/*", "file://*/*"],
         "js": [
-            "fg/js/document.js",
-            "fg/js/source-range.js",
-            "fg/js/source-element.js",
             "fg/js/api.js",
+            "fg/js/document.js",
             "fg/js/popup.js",
+            "fg/js/source-element.js",
+            "fg/js/source-range.js",
+            "fg/js/util.js",
+
             "fg/js/frontend.js"
         ],
         "css": ["fg/css/client.css"]
