--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 2,
     "name": "Yomichan",
-    "version": "1.3.4",
+    "version": "1.3.5",
 
     "description": "Japanese dictionary with Anki integration",
     "icons": {"16": "mixed/img/icon16.png", "48": "mixed/img/icon48.png", "128": "mixed/img/icon128.png"},
@@ -55,5 +55,8 @@
             "strict_min_version": "52.0",
             "update_url": "https://foosoft.net/projects/yomichan/dl/updates.json"
         }
+    },
+    "sandbox": {
+        "pages": ["sb/sandbox.html"]
     }
 }
