--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -49,14 +49,12 @@
         }
     },
     "web_accessible_resources": ["fg/float.html"],
+    "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
     "applications": {
         "gecko": {
             "id": "yomichan-live@foosoft.net",
             "strict_min_version": "52.0",
             "update_url": "https://foosoft.net/projects/yomichan/dl/updates.json"
         }
-    },
-    "sandbox": {
-        "pages": ["sb/sandbox.html"]
     }
 }
