--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -1,9 +1,9 @@
 {
     "manifest_version": 2,
-    "name": "Yomichan",
+    "name": "Yomichan (testing)",
     "version": "1.6.0",
 
-    "description": "Japanese dictionary with Anki integration",
+    "description": "Japanese dictionary with Anki integration (testing)",
     "icons": {"16": "mixed/img/icon16.png", "48": "mixed/img/icon48.png", "128": "mixed/img/icon128.png"},
     "browser_action": {
         "default_icon": {"19": "mixed/img/icon19.png", "38": "mixed/img/icon38.png"},
