--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -1,6 +1,6 @@
 {
     "manifest_version": 2,
-    "name": "Yomichan (testing)",
+    "name": "Yomichan",
     "version": "1.6.2",
 
     "description": "Japanese dictionary with Anki integration (testing)",
@@ -54,7 +54,7 @@
     "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
     "applications": {
         "gecko": {
-            "id": "alex.testing@foosoft.net",
+            "id": "alex@foosoft.net",
             "strict_min_version": "52.0"
         }
     }
