--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -1,9 +1,9 @@
 {
     "manifest_version": 2,
     "name": "Yomichan",
-    "version": "1.8.7",
+    "version": "1.8.8",
 
-    "description": "Japanese dictionary with Anki integration (testing)",
+    "description": "Japanese dictionary with Anki integration",
     "icons": {"16": "mixed/img/icon16.png", "48": "mixed/img/icon48.png", "128": "mixed/img/icon128.png"},
     "browser_action": {
         "default_icon": {"19": "mixed/img/icon19.png", "38": "mixed/img/icon38.png"},
