Add unlimited storage permission

--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -41,7 +41,8 @@
     "permissions": [
         "<all_urls>",
         "storage",
-        "clipboardWrite"
+        "clipboardWrite",
+        "unlimitedStorage"
     ],
     "commands": {
         "toggle": {
