add clipboard monitor to search page
Related to issue #262 about APIs

--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -41,6 +41,7 @@
     "permissions": [
         "<all_urls>",
         "storage",
+        "clipboardRead",
         "clipboardWrite",
         "unlimitedStorage"
     ],
