Rename extension.js to core.js to better reflect its use

--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -18,7 +18,7 @@
     "content_scripts": [{
         "matches": ["http://*/*", "https://*/*", "file://*/*"],
         "js": [
-            "mixed/js/extension.js",
+            "mixed/js/core.js",
             "fg/js/api.js",
             "fg/js/document.js",
             "fg/js/frontend-api-receiver.js",
