--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -19,6 +19,7 @@
         "matches": ["http://*/*", "https://*/*", "file://*/*"],
         "js": [
             "mixed/js/core.js",
+            "mixed/js/dom.js",
             "fg/js/api.js",
             "fg/js/document.js",
             "fg/js/frontend-api-receiver.js",
