--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,7 @@
         "/ext/bg/js/templates.js"
     ],
     "rules": {
-        "arrow-parens": ["error", "as-needed"],
+        "arrow-parens": ["error", "always"],
         "comma-dangle": ["error", "never"],
         "curly": ["error", "all"],
         "dot-notation": "error",
