--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -20,6 +20,7 @@
         "js": [
             "mixed/js/core.js",
             "mixed/js/dom.js",
+            "mixed/js/text-scanner.js",
             "fg/js/api.js",
             "fg/js/document.js",
             "fg/js/frontend-api-receiver.js",
