--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "homepage": "https://foosoft.net/projects/yomichan/",
     "devDependencies": {
-        "eslint": "^6.8.0"
+        "eslint": "^6.8.0",
+        "eslint-plugin-no-unsanitized": "^3.0.2"
     }
 }
