Update rules for test files

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -65,6 +65,15 @@
             "env": {
                 "jquery": true
             }
+        },
+        {
+            "files": ["test/**/*.js"],
+            "env": {
+                "browser": false,
+                "es2017": false,
+                "webextensions": false,
+                "node": true
+            }
         }
     ]
 }
