--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -31,6 +31,7 @@
             "fg/js/frontend-initialize.js"
         ],
         "css": ["fg/css/client.css"],
+        "match_about_blank": true,
         "all_frames": true
     }],
     "minimum_chrome_version": "57.0.0.0",
