--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -51,6 +51,7 @@
                 "stringReplaceAsync": "readonly",
                 "parseUrl": "readonly",
                 "EventDispatcher": "readonly",
+                "EventListenerCollection": "readonly",
                 "EXTENSION_IS_BROWSER_EDGE": "readonly"
             }
         },
