--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,6 +27,7 @@
         "no-constant-condition": "off",
         "no-global-assign": "error",
         "no-param-reassign": "off",
+        "no-prototype-builtins": "error",
         "no-shadow": ["error", {"builtinGlobals": false}],
         "no-undef": "error",
         "no-unneeded-ternary": "error",
