--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "homepage": "https://foosoft.net/projects/yomichan/",
     "devDependencies": {
         "eslint": "^6.8.0",
-        "eslint-plugin-no-unsanitized": "^3.0.2"
+        "eslint-plugin-no-unsanitized": "^3.0.2",
+        "fake-indexeddb": "^3.0.0"
     }
 }
