--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -74,7 +74,7 @@
     },
     "overrides": [
         {
-            "files": ["*.js"],
+            "files": ["ext/**/*.js"],
             "excludedFiles": ["ext/mixed/js/core.js"],
             "globals": {
                 "yomichan": "readonly",
