--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     },
     "scripts": {
         "test": "npm run test-lint && npm run test-code",
-        "test-lint": "eslint .",
+        "test-lint": "eslint . && node ./test/lint/global-declarations.js",
         "test-code": "node ./test/test-schema.js && node ./test/test-dictionary.js && node ./test/test-database.js && node ./test/test-document.js"
     },
     "repository": {
