--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -23,9 +23,11 @@
             "mixed/js/api.js",
             "mixed/js/text-scanner.js",
             "fg/js/document.js",
+            "fg/js/frontend-api-sender.js",
             "fg/js/frontend-api-receiver.js",
             "fg/js/popup.js",
             "fg/js/source.js",
+            "fg/js/popup-proxy.js",
             "fg/js/popup-proxy-host.js",
             "fg/js/frontend.js",
             "fg/js/frontend-initialize.js"
