--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -27,6 +27,7 @@
             "fg/js/frontend-api-receiver.js",
             "fg/js/popup.js",
             "fg/js/source.js",
+            "fg/js/frame-offset-forwarder.js",
             "fg/js/popup-proxy.js",
             "fg/js/popup-proxy-host.js",
             "fg/js/frontend.js",
