Create some tests for fullscreen elements, <iframe>s, and shadow DOMs

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -106,6 +106,7 @@
         },
         {
             "files": ["test/**/*.js"],
+            "excludedFiles": ["test/data/html/*.js"],
             "parserOptions": {
                 "ecmaVersion": 8,
                 "sourceType": "module"
