--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -4,9 +4,26 @@
     "version": "20.4.18.0",
 
     "description": "Japanese dictionary with Anki integration",
-    "icons": {"16": "mixed/img/icon16.png", "48": "mixed/img/icon48.png", "128": "mixed/img/icon128.png"},
+    "icons": {
+        "16": "mixed/img/icon16.png",
+        "19": "mixed/img/icon19.png",
+        "32": "mixed/img/icon32.png",
+        "38": "mixed/img/icon38.png",
+        "48": "mixed/img/icon48.png",
+        "64": "mixed/img/icon48.png",
+        "128": "mixed/img/icon128.png"
+    },
     "browser_action": {
-        "default_icon": {"19": "mixed/img/icon19.png", "38": "mixed/img/icon38.png"},
+        "default_icon": {
+            "16": "mixed/img/icon16.png",
+            "19": "mixed/img/icon19.png",
+            "32": "mixed/img/icon32.png",
+            "38": "mixed/img/icon38.png",
+            "48": "mixed/img/icon48.png",
+            "64": "mixed/img/icon48.png",
+            "128": "mixed/img/icon128.png"
+        },
+        "default_title": "Yomichan",
         "default_popup": "bg/context.html"
     },
 
