Dynamic loader load style (#521)
* Remove unnecessary load of /fg/css/client.css

* Replace dynamicLoader.loadStyles with dynamicLoader.loadStyle

* Replace Popup._injectStylesheet with dynamicLoader.loadStyle

* Remove unused global

--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -38,6 +38,7 @@
             "mixed/js/core.js",
             "mixed/js/dom.js",
             "mixed/js/api.js",
+            "mixed/js/dynamic-loader.js",
             "mixed/js/text-scanner.js",
             "fg/js/document.js",
             "fg/js/frontend-api-sender.js",
