Generalized frame connections (#654)
* Create FrameClient and FrameEndpoint

* Use new Frame* classes for Popup=>frame connection

* Update api.sendMessageToFrame and api.broadcastTab to include the sender's frameId

* Update FrameClient to store the frame's frameId

--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -41,6 +41,7 @@
             "mixed/js/dom.js",
             "mixed/js/api.js",
             "mixed/js/dynamic-loader.js",
+            "mixed/js/frame-client.js",
             "mixed/js/text-scanner.js",
             "fg/js/document.js",
             "fg/js/dom-text-scanner.js",
