Build system changes (#721)
* Refactor manifest.json

* Change end-of-line convention for built plain-text files

* Ignore builds directory

* Mark the "dev" directory as using the node environment

* Create build script

* Register build scripts

* Remove old build script

* Fix 64x64 icon

* Add test to ensure manifest data is updated properly

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,7 @@
-*.handlebars text eol=lf
+*.sh text eol=lf
+ext/*.handlebars text eol=lf
+ext/*.js text eol=lf
+ext/*.json text eol=lf
+ext/*.css text eol=lf
+ext/*.html text eol=lf
+ext/*.svg text eol=lf
