document.js refactor (#719)
* Refactor document.js into a class

* Move public functions first

* Rename private functions

* Rename

* Rename argument

* Use instance of DocumentUtil

* Update tests

* Refactor

* Rename (test-)document.js to (test-)document-util.js

--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -46,7 +46,7 @@
                 "mixed/js/dynamic-loader.js",
                 "mixed/js/frame-client.js",
                 "mixed/js/text-scanner.js",
-                "fg/js/document.js",
+                "fg/js/document-util.js",
                 "fg/js/dom-text-scanner.js",
                 "fg/js/popup.js",
                 "fg/js/source.js",
