--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -52,6 +52,7 @@
                 "fg/js/popup-factory.js",
                 "fg/js/frame-offset-forwarder.js",
                 "fg/js/popup-proxy.js",
+                "fg/js/popup-window.js",
                 "fg/js/frontend.js",
                 "fg/js/content-script-main.js"
             ],
