Add test-manifest to continuous integration tests (#827)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,3 +25,7 @@ jobs:
       run: npm run test-code
       env:
         CI: true
+    - name: Manifest
+      run: npm run test-manifest
+      env:
+        CI: true
