Split source.js into two files (#894)

--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -48,7 +48,8 @@
                 "mixed/js/document-util.js",
                 "fg/js/dom-text-scanner.js",
                 "fg/js/popup.js",
-                "fg/js/source.js",
+                "fg/js/text-source-range.js",
+                "fg/js/text-source-element.js",
                 "fg/js/popup-factory.js",
                 "fg/js/frame-offset-forwarder.js",
                 "fg/js/popup-proxy.js",
